--- a/experiments/Regression_Project_Amazon_Sales - 1.ipynb
+++ b/experiments/Regression_Project_Amazon_Sales - 1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "82a3fc28",
    "metadata": {},
    "outputs": [
@@ -180,13 +180,49 @@
    "metadata": {},
    "source": [
     "Categories That Strongly Drive Higher Sales\n",
-    "Top positive predictors:\n",
-    "Category                                    \tEffect\n",
-    "Western Dress\t                            Strongest positive effect — sells the most\n",
-    "Sets (Set)                              \tAlso strong sellers\n",
-    "Kurta\t                                    Very strong positive driver\n",
-    "Top                                      \tStrong positive\n",
-    "Ethnic Dress\t                            Moderately positive"
+    "\n",
+    "Top positive predictors:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c8c6144",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Category:  Western Dress- Strongest positive effect — sells the most;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84c4bf08",
+   "metadata": {},
+   "source": [
+    "Sets (Set)- Also strong sellers;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e038b9e",
+   "metadata": {},
+   "source": [
+    "Kurta- Very strong positive driver;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d1d45e8",
+   "metadata": {},
+   "source": [
+    "Top- Strong positive;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6807413e",
+   "metadata": {},
+   "source": [
+    "Ethnic Dress- Moderately positive;"
    ]
   },
   {
@@ -205,7 +241,14 @@
    "id": "56cc4281",
    "metadata": {},
    "source": [
-    "Categories That Lower Sales:\n",
+    "Categories That Lower Sales\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f982d44",
+   "metadata": {},
+   "source": [
     "Avoid overstocking:\n",
     "Sarees, Dupattas, Bottoms"
    ]
@@ -226,23 +269,30 @@
    "id": "06b608ec",
    "metadata": {},
    "source": [
-    "Summary: What We Should Stock More\n",
+    "Summary: What We Should Stock More\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02f1b338",
+   "metadata": {},
+   "source": [
     "Best categories to stock:\n",
-    "Western Dresses\n",
-    "Sets\n",
-    "Kurtas\n",
-    "Tops\n",
-    "Ethnic Dresses\n",
+    "Western Dresses;\n",
+    "Sets;\n",
+    "Kurtas;\n",
+    "Tops;\n",
+    "Ethnic Dresses;\n",
     "\n",
     "Best sizes to stock:\n",
-    "M, L, XL, XXL, 4XL, 5XL, 6XL\n",
+    "M, L, XL, XXL, 4XL, 5XL, 6XL;\n",
     "\n",
     "Avoid overstocking:\n",
-    "Sarees\n",
-    "Dupattas\n",
-    "Bottoms\n",
-    "XS\n",
-    "S"
+    "Sarees;\n",
+    "Dupattas;\n",
+    "Bottoms;\n",
+    "XS;\n",
+    "S;"
    ]
   }
  ],
