--- a/experiments/Regression_Project_Amazon_Sales - 1.ipynb
+++ b/experiments/Regression_Project_Amazon_Sales - 1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "82a3fc28",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anria\\AppData\\Local\\Temp\\ipykernel_38236\\2571153955.py:22: DtypeWarning: Columns (23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\anria\\AppData\\Local\\Temp\\ipykernel_38236\\99505703.py:22: DtypeWarning: Columns (23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(data_path)\n"
      ]
     },
@@ -32,11 +32,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✅ SKU Regression Results:\n",
+      " SKU Regression Results:\n",
       "RMSE: 19.35\n",
       "R²: 0.0455\n",
       "\n",
-      "🔹 Top 15 Positive Features (drive higher sales):\n",
+      " Top 15 Positive Features (drive higher sales):\n",
       " Category_Western Dress    14.529545\n",
       "Category_Set               7.448648\n",
       "Size_6XL                   7.118155\n",
@@ -54,7 +54,7 @@
       "Size_S                     0.163790\n",
       "dtype: float64\n",
       "\n",
-      "🔹 Top 15 Negative Features (lower sales):\n",
+      " Top 15 Negative Features (lower sales):\n",
       " Size_L                       3.711206\n",
       "fulfilled-by_Unknown         3.226122\n",
       "Size_XL                      2.698507\n",
@@ -72,7 +72,7 @@
       "Sales Channel_Non-Amazon   -11.713630\n",
       "dtype: float64\n",
       "\n",
-      "🔥 Top 10 Most Popular SKUs:\n",
+      " Top 10 Most Popular SKUs:\n",
       "\n",
       "                  SKU       Category Size  Qty\n",
       "7100     JNE3797-KR-L  Western Dress    L  456\n",
@@ -147,17 +147,17 @@
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "print(f\"\\n✅ SKU Regression Results:\")\n",
+    "print(f\"\\n SKU Regression Results:\")\n",
     "print(f\"RMSE: {rmse:.2f}\")\n",
     "print(f\"R²: {r2:.4f}\")\n",
     "\n",
     "# Feature importance\n",
     "coefficients = pd.Series(model.coef_, index=X.columns).sort_values(ascending=False)\n",
-    "print(\"\\n🔹 Top 15 Positive Features (drive higher sales):\\n\", coefficients.head(15))\n",
-    "print(\"\\n🔹 Top 15 Negative Features (lower sales):\\n\", coefficients.tail(15))\n",
+    "print(\"\\n Top 15 Positive Features (drive higher sales):\\n\", coefficients.head(15))\n",
+    "print(\"\\n Top 15 Negative Features (lower sales):\\n\", coefficients.tail(15))\n",
     "\n",
     "# Find top-selling SKUs\n",
-    "print(\"\\n🔥 Top 10 Most Popular SKUs:\\n\")\n",
+    "print(\"\\n Top 10 Most Popular SKUs:\\n\")\n",
     "print(agg_df[['SKU', 'Category', 'Size', 'Qty']].sort_values('Qty', ascending=False).head(10))"
    ]
   },
