I have updated UofT BRAND Color PALETTE to all the charts

--- a/experiments/Amazon Sale Report.ipynb
+++ b/experiments/Amazon Sale Report.ipynb
@@ -1956,6 +1956,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54da2b00",
+   "metadata": {},
+   "source": [
+    "I have updated UofT BRAND Color PALETTE to all the charts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 160,
    "id": "d54a0ce4",
